Fixed Card ID shifting size when being edited.

--- a/inkrose/src/App.css
+++ b/inkrose/src/App.css
@@ -154,9 +154,13 @@
 .card-id {
   position: absolute;
   transform: rotate(270deg);
-  left: 330px;
+  left: 260px;
   top: 399px;
   font-size: 14px;
+  width: 200px;
+  height: 30px;
+  text-align: center;
+  overflow: hidden;
 }
 
 .card-wobble {
